{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 273,
  "lineage": "b9acc165-1bfd-6ddf-00ab-a1adab753dfa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "autoscalling_group_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385351182854:loadbalancer/app/autoscallinggroupelb/66f78d61544d7f35",
            "arn_suffix": "app/autoscallinggroupelb/66f78d61544d7f35",
            "dns_name": "autoscallinggroupelb-219445472.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:385351182854:loadbalancer/app/autoscallinggroupelb/66f78d61544d7f35",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "autoscallinggroupelb",
            "security_groups": [
              "sg-06aced44bd7bddede"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03ec82dbdf9977ca1"
              },
              {
                "subnet_id": "subnet-080cd0a15f32751b7"
              }
            ],
            "subnets": [
              "subnet-03ec82dbdf9977ca1",
              "subnet-080cd0a15f32751b7"
            ],
            "vpc_id": "vpc-0c7d2a34bd08985e6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.subnet1",
            "aws_subnet.subnet3",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e0bb36c61bb9715",
            "arn": "arn:aws:ec2:us-east-1:385351182854:instance/i-08f6e661cea7e4e1b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f6e661cea7e4e1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "poc-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e634d13f64c7ff88",
            "private_dns": "ip-10-1-1-200.ec2.internal",
            "private_ip": "10.1.1.200",
            "public_dns": "ec2-34-229-84-85.compute-1.amazonaws.com",
            "public_ip": "34.229.84.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067b04bf5f62e698d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09772c98cff34de0b",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "rahul-instance",
              "Owner": "rahul"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "rahul-instance",
              "Owner": "rahul"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0baeb6271bdbae7ae"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:internet-gateway/igw-0952fb80a2d1e118a",
            "id": "igw-0952fb80a2d1e118a",
            "owner_id": "385351182854",
            "tags": {
              "Name": "rahul-igw",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-igw",
              "Owner": "rahul"
            },
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:route-table/rtb-0752cb86903fec1b2",
            "id": "rtb-0752cb86903fec1b2",
            "owner_id": "385351182854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0952fb80a2d1e118a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rahul-rt",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-rt",
              "Owner": "rahul"
            },
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:route-table/rtb-07e4242f82c0f2268",
            "id": "rtb-07e4242f82c0f2268",
            "owner_id": "385351182854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0952fb80a2d1e118a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rahul-rt",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-rt",
              "Owner": "rahul"
            },
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9879acc3ae48bc1",
            "route_table_id": "rtb-0752cb86903fec1b2",
            "subnet_id": "subnet-080cd0a15f32751b7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6c304cbe879e272",
            "route_table_id": "rtb-07e4242f82c0f2268",
            "subnet_id": "subnet-09772c98cff34de0b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt2",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:security-group/sg-06aced44bd7bddede",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aced44bd7bddede",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_name",
            "name_prefix": "",
            "owner_id": "385351182854",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:security-group/sg-081f7f67253475447",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081f7f67253475447",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscalling_security_group",
            "name_prefix": "",
            "owner_id": "385351182854",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:security-group/sg-0baeb6271bdbae7ae",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baeb6271bdbae7ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "76.230.153.98/32"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rahul-sg",
            "name_prefix": "",
            "owner_id": "385351182854",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rahul-sg",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-sg",
              "Owner": "rahul"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:subnet/subnet-080cd0a15f32751b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-080cd0a15f32751b7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385351182854",
            "tags": {
              "Name": "rahul-subnet1",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-subnet1",
              "Owner": "rahul"
            },
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:subnet/subnet-09772c98cff34de0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-09772c98cff34de0b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385351182854",
            "tags": {
              "Name": "rahul-subnet2",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-subnet2",
              "Owner": "rahul"
            },
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:subnet/subnet-03ec82dbdf9977ca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-03ec82dbdf9977ca1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385351182854",
            "tags": {
              "Name": "rahul-subnet3",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-subnet3",
              "Owner": "rahul"
            },
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:subnet/subnet-0b5a3c4cd8186def3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0b5a3c4cd8186def3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385351182854",
            "tags": {
              "Name": "rahul-subnet4",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-subnet4",
              "Owner": "rahul"
            },
            "vpc_id": "vpc-0c7d2a34bd08985e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385351182854:vpc/vpc-0c7d2a34bd08985e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c4db3bcd96a75a3c",
            "default_route_table_id": "rtb-046c75a1087801665",
            "default_security_group_id": "sg-09ec48bcb736e915f",
            "dhcp_options_id": "dopt-f8836181",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c7d2a34bd08985e6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-046c75a1087801665",
            "owner_id": "385351182854",
            "tags": {
              "Name": "rahul-vpc",
              "Owner": "rahul"
            },
            "tags_all": {
              "Name": "rahul-vpc",
              "Owner": "rahul"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}